--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SkipTheQueue</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="google_maps_key">AIzaSyCTBGaqxM0zgr0u8CasDfq4UMgaqC2pKCU</string>
+    
 </resources>
